k8s/azure/pixelated-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pixelated
  labels:
    app: pixelated
    managed-by: terraform
